[gd_scene load_steps=5 format=3 uid="uid://chu5vd40w4nl5"]

[ext_resource type="Script" path="res://frontend/stat_sheet.gd" id="1_y0pde"]
[ext_resource type="Texture2D" uid="uid://j8rxwog8xbei" path="res://frontend/props/choose_character_background.png" id="2_yswsv"]
[ext_resource type="FontFile" uid="uid://bu5bpxl6utbrq" path="res://frontend/props/Minecraft.ttf" id="3_d0iff"]

[sub_resource type="Theme" id="Theme_hgket"]
default_font = ExtResource("3_d0iff")
default_font_size = 32

[node name="StatSheet" type="Node2D"]
position = Vector2(576, 144)
script = ExtResource("1_y0pde")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(0, -40)
scale = Vector2(0.170991, 0.156934)
texture = ExtResource("2_yswsv")

[node name="STR" type="Label" parent="."]
offset_left = -56.0
offset_top = -88.0
offset_right = 12.0
offset_bottom = -53.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "STR"
vertical_alignment = 1

[node name="STR_V" type="Label" parent="."]
offset_top = -88.0
offset_right = 36.0
offset_bottom = -53.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "2
"
vertical_alignment = 1

[node name="STR_B_V" type="Label" parent="."]
offset_left = 32.0
offset_top = -88.0
offset_right = 68.0
offset_bottom = -53.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0.921569, 0, 0.176471, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "+1"
vertical_alignment = 1

[node name="MOV" type="Label" parent="."]
offset_left = -56.0
offset_top = -64.0
offset_right = 14.0
offset_bottom = -29.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "MOV
"
vertical_alignment = 1

[node name="MOV_V" type="Label" parent="."]
offset_top = -64.0
offset_right = 36.0
offset_bottom = -29.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "1"
vertical_alignment = 1

[node name="MOV_B_V" type="Label" parent="."]
offset_left = 32.0
offset_top = -64.0
offset_right = 70.0
offset_bottom = -29.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "+0"
vertical_alignment = 1

[node name="LIF" type="Label" parent="."]
offset_left = -56.0
offset_top = -40.0
offset_right = 12.0
offset_bottom = -5.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "LIF
"
vertical_alignment = 1

[node name="LIF_V" type="Label" parent="."]
offset_top = -40.0
offset_right = 36.0
offset_bottom = -5.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "13"
vertical_alignment = 1

[node name="LIF_B_V" type="Label" parent="."]
offset_left = 32.0
offset_top = -40.0
offset_right = 70.0
offset_bottom = -5.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "+0
"
vertical_alignment = 1

[node name="DEF" type="Label" parent="."]
offset_left = -56.0
offset_top = -16.0
offset_right = 12.0
offset_bottom = 19.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "DEF
"
vertical_alignment = 1

[node name="DEF_V" type="Label" parent="."]
offset_top = -16.0
offset_right = 36.0
offset_bottom = 19.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "0"
vertical_alignment = 1

[node name="DEF_B_V" type="Label" parent="."]
offset_left = 32.0
offset_top = -16.0
offset_right = 70.0
offset_bottom = 19.0
scale = Vector2(0.672001, 0.672001)
theme = SubResource("Theme_hgket")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
text = "+0"
vertical_alignment = 1

[node name="Switch" type="Button" parent="."]
offset_left = 72.0
offset_top = -8.00002
offset_right = 94.0
offset_bottom = 23.0
scale = Vector2(0.511225, 0.511225)
text = "‚ü≥"

[connection signal="pressed" from="Switch" to="." method="_on_switch_pressed"]
